# glue

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
example/: servers.toml
example/api/: .gitignore  README.md  app.py  pyproject.toml
example/ui/: App.tsx  index.html  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
example/www/: 404.html
src/glue/: __main__.py  compat.py  config.py  main.py  middleware.py  pm.py  typecast.py  utils.py
src/glue/apps/: __init__.py  proxy_pass.py
src/glue/pty/: __init__.py  _unixpty.py  _winpty.py
src/glue/ui/: __init__.py  app.py  commands.py  screens.py
src/glue/web/: __init__.py  clients.py  factory.py  main.py  middleware.py  proxy.py
tests/: test_typecast.py  test_utils_dirs.py
